# rics

./: .gitignore  apc_domain.py  apc_domain_enhanced.py  config.yaml  main.py  mcp_server.py  models.py  pdf_extractor.py  pyproject.toml  tool_registry.py  utils.py
extracted_texts/: February_2022_Assessment_of_Professional_Competence_Candidate_Guide.txt
